--- a/languages/he.json
+++ b/languages/he.json
@@ -4,7 +4,7 @@
   "get": "לקבל ערך",
   "set": "עריכה",
   "push": "שליחה",
-  "none": "לא נבחר משתמש",
+  "none": "...טוען",
   "userAdress": "כתובת משתמש",
   "number": "מספר משתמש",
   "city": "עיר",
